1.添加一些 transition效果

--- a/app/src/main/res/layout/item_topic.xml
+++ b/app/src/main/res/layout/item_topic.xml
@@ -14,6 +14,7 @@
     </data>
 
     <LinearLayout
+        android:id="@+id/ll_topic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
